// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snap - components | CONFIGURATION: default | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.all-props.Q+oGeA==",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`snap - components | CONFIGURATION: default | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests.__fixtures__.components.conditional-rendering.0xB54A==",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`snap - components | CONFIGURATION: default | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.default.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: default | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: default | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`snap - components | CONFIGURATION: default | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`snap - components | CONFIGURATION: default | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests.__fixtures__.components.all-supported-components.DDvTLQ==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.all-supported-components.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: default | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.JIv6Rw==",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.VIzw6A==",
    defaultMessage: "another"
});
"
`;

exports[`snap - components | CONFIGURATION: default | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: default | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as TestFormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(TestFormattedMessage, {
    id: "tests.__fixtures__.components.import-as.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: default | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.nested-jsx.JIv6Rw==",
        defaultMessage: "hello"
    })
});
"
`;

exports[`snap - components | CONFIGURATION: default | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`snap - components | CONFIGURATION: default | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "IkK47Q==",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "nqx1ag==",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "Hjvdvg==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "pFOdsA==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "Osoh0A==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "jPnGkA==",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "NpTm0A==",
    defaultMessage: "another"
});
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as TestFormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(TestFormattedMessage, {
    id: "PYx5aQ==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "EEWZhg==",
        defaultMessage: "hello"
    })
});
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`snap - components | CONFIGURATION: hashAlgorithm = "murmur3" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.different-module-source.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "another"
});
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as TestFormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(TestFormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        defaultMessage: "hello"
    })
});
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`snap - components | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.all-props.Q+oGeA==",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests.__fixtures__.components.conditional-rendering.0xB54A==",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.default.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests.__fixtures__.components.all-supported-components.DDvTLQ==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.all-supported-components.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.JIv6Rw==",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.VIzw6A==",
    defaultMessage: "another"
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as TestFormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(TestFormattedMessage, {
    id: "tests.__fixtures__.components.import-as.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.nested-jsx.JIv6Rw==",
        defaultMessage: "hello"
    })
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.all-props.Q+oGeA==",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests.__fixtures__.components.conditional-rendering.0xB54A==",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.default.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests.__fixtures__.components.all-supported-components.DDvTLQ==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.all-supported-components.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.JIv6Rw==",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.VIzw6A==",
    defaultMessage: "another"
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as TestFormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(TestFormattedMessage, {
    id: "tests.__fixtures__.components.import-as.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.nested-jsx.JIv6Rw==",
        defaultMessage: "hello"
    })
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`snap - components | CONFIGURATION: relativeTo = "../" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "__fixtures__.components.all-props.Q+oGeA==",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "__fixtures__.components.conditional-rendering.0xB54A==",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "__fixtures__.components.default.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "__fixtures__.components.all-supported-components.DDvTLQ==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "__fixtures__.components.all-supported-components.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "__fixtures__.components.multiple-uses.JIv6Rw==",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "__fixtures__.components.multiple-uses.VIzw6A==",
    defaultMessage: "another"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as TestFormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(TestFormattedMessage, {
    id: "__fixtures__.components.import-as.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "__fixtures__.components.nested-jsx.JIv6Rw==",
        defaultMessage: "hello"
    })
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "components.all-props.Q+oGeA==",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "components.conditional-rendering.0xB54A==",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "components.default.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "components.all-supported-components.DDvTLQ==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "components.all-supported-components.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "components.multiple-uses.JIv6Rw==",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "components.multiple-uses.VIzw6A==",
    defaultMessage: "another"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as TestFormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(TestFormattedMessage, {
    id: "components.import-as.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "components.nested-jsx.JIv6Rw==",
        defaultMessage: "hello"
    })
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests.__fixtures__" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "__fixtures__.components.all-props.Q+oGeA==",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "__fixtures__.components.conditional-rendering.0xB54A==",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "__fixtures__.components.default.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "__fixtures__.components.all-supported-components.DDvTLQ==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "__fixtures__.components.all-supported-components.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "__fixtures__.components.multiple-uses.JIv6Rw==",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "__fixtures__.components.multiple-uses.VIzw6A==",
    defaultMessage: "another"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as TestFormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(TestFormattedMessage, {
    id: "__fixtures__.components.import-as.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "__fixtures__.components.nested-jsx.JIv6Rw==",
        defaultMessage: "hello"
    })
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = "tests/" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.all-props.Q+oGeA==",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests.__fixtures__.components.conditional-rendering.0xB54A==",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.default.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests.__fixtures__.components.all-supported-components.DDvTLQ==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.all-supported-components.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.JIv6Rw==",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests.__fixtures__.components.multiple-uses.VIzw6A==",
    defaultMessage: "another"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as TestFormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(TestFormattedMessage, {
    id: "tests.__fixtures__.components.import-as.JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests.__fixtures__.components.nested-jsx.JIv6Rw==",
        defaultMessage: "hello"
    })
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = /__fixtures__/ | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "Q+oGeA==",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "0xB54A==",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "DDvTLQ==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "JIv6Rw==",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "VIzw6A==",
    defaultMessage: "another"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as TestFormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(TestFormattedMessage, {
    id: "JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "JIv6Rw==",
        defaultMessage: "hello"
    })
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`snap - components | CONFIGURATION: removePrefix = true | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | all props 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App() {
    return /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests___fixtures___components_all-props_e//M1w==",
        defaultMessage: "Hello {name}",
        description: "A greeting message",
        values: {
            name: 'World'
        },
        tagName: "span"
    });
}
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | conditional rendering 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
function App(param) {
    var showMessage = param.showMessage;
    return /*#__PURE__*/ _jsx("div", {
        children: showMessage && /*#__PURE__*/ _jsx(FormattedMessage, {
            id: "tests___fixtures___components_conditional-rendering_0xB54A==",
            defaultMessage: "Conditional message"
        })
    });
}
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests___fixtures___components_default_JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'gatsby-plugin-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | does nothing if component props are spread 1`] = `
"function _define_property(obj, key, value) {
    if (key in obj) {
        Object.defineProperty(obj, key, {
            value: value,
            enumerable: true,
            configurable: true,
            writable: true
        });
    } else {
        obj[key] = value;
    }
    return obj;
}
function _object_spread(target) {
    for(var i = 1; i < arguments.length; i++){
        var source = arguments[i] != null ? arguments[i] : {};
        var ownKeys = Object.keys(source);
        if (typeof Object.getOwnPropertySymbols === "function") {
            ownKeys = ownKeys.concat(Object.getOwnPropertySymbols(source).filter(function(sym) {
                return Object.getOwnPropertyDescriptor(source, sym).enumerable;
            }));
        }
        ownKeys.forEach(function(key) {
            _define_property(target, key, source[key]);
        });
    }
    return target;
}
import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var props = {
    defaultMessage: 'hello'
};
/*#__PURE__*/ _jsx(FormattedMessage, _object_spread({}, props));
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | does nothing if components not imported from react-intl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
export { };
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    id: "tests___fixtures___components_all-supported-components_DDvTLQ==",
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests___fixtures___components_all-supported-components_JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests___fixtures___components_multiple-uses_JIv6Rw==",
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "tests___fixtures___components_multiple-uses_VIzw6A==",
    defaultMessage: "another"
});
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | user id 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    id: "foobar",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as TestFormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(TestFormattedMessage, {
    id: "tests___fixtures___components_import-as_JIv6Rw==",
    defaultMessage: "hello"
});
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        id: "tests___fixtures___components_nested-jsx_JIv6Rw==",
        defaultMessage: "hello"
    })
});
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world ".concat(1 + 1)
});
"
`;

exports[`snap - components | CONFIGURATION: separator = "_" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = 'variable message';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;
